// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar renders correctly  1`] = `
<DocumentFragment>
  .cache-11hwgak-StyledDiv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  bottom: 20px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  height: 56px;
  left: 50%;
  padding: 16px;
  position: fixed;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  width: 600px;
  z-index: 2;
}

<div
    class="cache-11hwgak-StyledDiv e1qbxe4b0"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`ActionBar renders correctly with custom rank 1`] = `
<DocumentFragment>
  .cache-e60duc-StyledDiv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  bottom: 172px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  height: 56px;
  left: 50%;
  padding: 16px;
  position: fixed;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  width: 600px;
  z-index: 2;
}

<div
    class="cache-e60duc-StyledDiv e1qbxe4b0"
  >
    I am rank 2
  </div>
</DocumentFragment>
`;
